fix: horizontal overflow

--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -7,7 +7,7 @@
   align-items: flex-start;
   flex-direction: column;
   text-align: center;
-  width: 100vw;
+  width: calc(100vw - 1rem);
   height: 50vh;
   overflow: hidden;
   isolation: isolate;
